--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "async": "^2.1.4",
     "mozjpeg-stream": "^1.0.3",
-    "node-resemble-js": "^0.2.0",
-    "temp": "^0.8.3"
+    "node-resemble-js": "^0.2.0"
   }
 }
