making folders build themselves

--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "changes",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node main.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "fs-extra": "^2.0.0",
     "mozjpeg-stream": "^1.0.3",
     "node-resemble-js": "^0.2.0"
   }
